--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,8 @@
 {
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
-    "python.terminal.activateEnvironment": true,
-    "python.linting.enabled": false,
-    "python.analysis.typeCheckingMode": "off",
-    "python.analysis.autoImportCompletions": true,
-    "python.analysis.ignore": [
-        "**/ui/main.py",
-        "**/adapters/telethon_adapter.py"
-    ]
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "black-formatter.args": ["--line-length", "120"]
 }
