리펙토링 설계 건적보기

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,24 +1,38 @@
 [MASTER]
+# --- 제가 추가한 가장 중요한 설정 ---
+# Pylint가 실행될 때, 프로젝트 최상위 폴더를 경로에 추가하여
+# 'core' 폴더나 다른 모듈을 찾을 수 있게 합니다.
+init-hook='import sys; sys.path.append(".")'
+# ------------------------------------
+
+# --- 사용자님의 기존 설정 (유지) ---
 extension-pkg-whitelist=PyQt5
 generated-members=PyQt5.*
 
 [MESSAGES CONTROL]
+# --- 사용자님의 기존 설정 (유지) ---
 disable=
     C0111,
     R0903,
     R0913,
     W0511,
     W0613,
-    W0612
+    W0612,
+    C0301, # Line too long (줄 길이 경고 비활성화)
+    C0413  # wrong-import-position (import 위치 경고 비활성화)
+
 
 [FORMAT]
-max-line-length=100
+# --- 사용자님의 기존 설정 (유지) ---
+max-line-length=120
 indent-string='    '
 
 [LOGGING]
+# --- 사용자님의 기존 설정 (유지) ---
 logging-format-style=old
 
 [EXCEPTIONS]
+# --- 사용자님의 기존 설정 (유지) ---
 overgeneral-exceptions=
     builtins.BaseException,
     builtins.Exception
