--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ __pycache__/
 .DS_Store
 .env
 .ruff_cache/
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
