--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,13 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "black-formatter.args": ["--line-length", "120"]
+    "black-formatter.args": ["--line-length", "120"],
+    "ruff.enable": false,
+    "ruff.lint.enable": false,
+    "ruff.format.enable": false,
+    "python.linting.ruffEnabled": false,
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportUnusedCoroutine": "none",
+        "reportArgumentType": "none"
+    }
 }
